--- a/tps/1_b_premier_pas_avec_pandas.ipynb
+++ b/tps/1_b_premier_pas_avec_pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7283ac40",
+   "id": "6a9c115e",
    "metadata": {},
    "source": [
     "# [Exercices] Premier pas avec `pandas`\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa414159",
+   "id": "467e04bf",
    "metadata": {},
    "source": [
     "# [Ex. 1] \n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "94a1ec3a",
+   "id": "9bbfc65b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff81b0d7",
+   "id": "47a104fb",
    "metadata": {},
    "source": [
     "#### question 2"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "051f9439",
+   "id": "24027ea6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af668658",
+   "id": "545e0189",
    "metadata": {},
    "source": [
     "#### question 3"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e200d572",
+   "id": "c9ed83ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "af30989a",
+   "id": "38c12350",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3c4cad1d",
+   "id": "076f9098",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ccdc49c2",
+   "id": "b05fd09b",
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd20e54a",
+   "id": "fbd4da91",
    "metadata": {},
    "source": [
     "#### question 4"
@@ -1002,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d27b06ef",
+   "id": "ff95821c",
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8ed76bc",
+   "id": "f0c7a58d",
    "metadata": {},
    "source": [
     "#### question 5"
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "df7ae54f",
+   "id": "729897ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "976c7cbc",
+   "id": "bb365b67",
    "metadata": {},
    "outputs": [
     {
@@ -2382,7 +2382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "296c4f8e",
+   "id": "9a91ab16",
    "metadata": {},
    "source": [
     "##### Rappel : list comprehension"
@@ -2391,7 +2391,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d703d3a4",
+   "id": "305b2351",
    "metadata": {},
    "outputs": [
     {
@@ -2424,7 +2424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7b8facc",
+   "id": "e9d31b74",
    "metadata": {},
    "source": [
     "#### Question 6"
@@ -2433,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "f4d445ce",
+   "id": "4f85f6ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2452,7 +2452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73d3dbd7",
+   "id": "f9a3ae08",
    "metadata": {},
    "source": [
     "#### Question 7"
@@ -2461,7 +2461,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "96cffff9",
+   "id": "4cc12929",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2472,7 +2472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d78b6f13",
+   "id": "853283d7",
    "metadata": {},
    "source": [
     "#### Question 8"
@@ -2481,7 +2481,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "bba3db1b",
+   "id": "3815b8a1",
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f735e5d",
+   "id": "9ab0ae53",
    "metadata": {},
    "source": [
     "# [Ex. 2] Création de données de tests\n",
@@ -2557,13 +2557,20 @@
     "\n",
     "\n",
     "### Question 3\n",
-    "Ecrire une fonction `split_train_test` qui prend en argument une DataFrame `df` et un réel `test_proportion` entre 0 et 1 et renvoie deux DataFrames `train` et `test`, ayant les mêmes colonnes que `df` et se partageant ses lignes (aléatoirement et de manière mutuellement exclusive) avec les proportions `1 - test_portion` et `test_portion`"
+    "Ecrire une fonction `split_train_test` qui prend en argument une DataFrame `df` et un réel `test_proportion` entre 0 et 1 et renvoie deux DataFrames `train` et `test`, ayant les mêmes colonnes que `df` et se partageant ses lignes (aléatoirement et de manière mutuellement exclusive) avec les proportions `1 - test_portion` et `test_portion`\n",
+    "\n",
+    "\n",
+    "### Question 4\n",
+    "Même question, en faisant en sorte que les moyennes des variables quantitatives des deux DataFrames `test` et `train` soient proches de celles des moyennes des variables quantitatives de `df` (moins de 10% d'écart)\n",
+    "\n",
+    "### Question 5\n",
+    "Même question, en faisant en sorte que les histogrammes des variables quantitatives des deux DataFrames `test` et `train` soient ressemblant à ceux des variables quantitatives de `df` (moins de 10% d'écart)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "e7f1837d",
+   "id": "bedb3ba7",
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b5dfd6b",
+   "id": "fc410cd5",
    "metadata": {},
    "source": [
     "# [Ex. 3 ] \n",
@@ -2755,7 +2762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5142b67f",
+   "id": "fec21394",
    "metadata": {},
    "source": [
     "# [Ex. 4] \n",
@@ -2772,7 +2779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3f5d936",
+   "id": "c38a7acb",
    "metadata": {},
    "source": [
     "# [Ex. 5] Une question d'entretien\n",
@@ -2809,7 +2816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1329183f",
+   "id": "7c6ae53b",
    "metadata": {},
    "outputs": [],
    "source": []
