--- a/tps/1_b_premier_pas_avec_pandas.ipynb
+++ b/tps/1_b_premier_pas_avec_pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6bc7df64",
+   "id": "75be1006",
    "metadata": {},
    "source": [
     "# [Exercices] Premier pas avec `pandas`\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5f7463a",
+   "id": "60a8eea0",
    "metadata": {},
    "source": [
     "# [Ex. 1] \n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5b3330a5",
+   "id": "18822916",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05b09699",
+   "id": "7ce227f8",
    "metadata": {},
    "source": [
     "#### question 2"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e7d42e45",
+   "id": "b6792a6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47d58184",
+   "id": "4d722b20",
    "metadata": {},
    "source": [
     "#### question 3"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bc48c250",
+   "id": "3135ab93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2bcc22f4",
+   "id": "6e8e14e3",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c8f2752d",
+   "id": "bc88389e",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1d5e9910",
+   "id": "277be8dc",
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d313bb6",
+   "id": "ae40cd73",
    "metadata": {},
    "source": [
     "#### question 4"
@@ -1002,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "45594ab6",
+   "id": "05c267d0",
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe62734",
+   "id": "4f3a66ff",
    "metadata": {},
    "source": [
     "#### question 5"
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "432dd8dc",
+   "id": "ae3163dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fe7478c3",
+   "id": "4e1941ff",
    "metadata": {},
    "outputs": [
     {
@@ -2382,7 +2382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6ce05df",
+   "id": "45357db5",
    "metadata": {},
    "source": [
     "##### Rappel : list comprehension"
@@ -2391,7 +2391,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "92401aae",
+   "id": "c4c2df0e",
    "metadata": {},
    "outputs": [
     {
@@ -2424,7 +2424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b01b9ae",
+   "id": "f18883c4",
    "metadata": {},
    "source": [
     "#### Question 6"
@@ -2433,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "1b90e62a",
+   "id": "8b13e70c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2452,7 +2452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "778a860d",
+   "id": "ef9417d6",
    "metadata": {},
    "source": [
     "#### Question 7"
@@ -2461,7 +2461,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "2b0592d7",
+   "id": "79b7c85b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2472,7 +2472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3aa08510",
+   "id": "e682e6e5",
    "metadata": {},
    "source": [
     "#### Question 8"
@@ -2481,7 +2481,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "771397f3",
+   "id": "3fe03df9",
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24a19774",
+   "id": "85ba001c",
    "metadata": {},
    "source": [
     "# [Ex. 2] Création de données de tests\n",
@@ -2570,7 +2570,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "2329ba0d",
+   "id": "34465ab8",
    "metadata": {},
    "outputs": [
     {
@@ -2722,7 +2722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c89fb12b",
+   "id": "dc51d3f5",
    "metadata": {},
    "source": [
     "#### Question 3"
@@ -2731,7 +2731,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "ea905184",
+   "id": "dc5ce13e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2745,7 +2745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b499469",
+   "id": "9a720767",
    "metadata": {},
    "source": [
     "#### Question 4"
@@ -2754,7 +2754,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "df629aab",
+   "id": "02e0d835",
    "metadata": {},
    "outputs": [
     {
@@ -2782,7 +2782,6 @@
    ],
    "source": [
     "def split_train_test_advanced(df, test_proportion):\n",
-    "        \n",
     "    l_train = []\n",
     "    l_test = []\n",
     "    for qty_value in df.quantity.unique():\n",
@@ -2813,24 +2812,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5c527f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8937326",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "ab433c15",
+   "id": "c0984a51",
    "metadata": {},
    "source": [
     "# [Ex. 3 ] \n",
@@ -2870,7 +2853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11a80791",
+   "id": "58be42dc",
    "metadata": {},
    "source": [
     "# [Ex. 4] \n",
@@ -2887,7 +2870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f4bf40f",
+   "id": "21c0c2eb",
    "metadata": {},
    "source": [
     "# [Ex. 5] Une question d'entretien\n",
@@ -2915,16 +2898,18 @@
     "- revenue (int)\n",
     "\n",
     "Pour chaque transaction (ie une ligne dans le fichier) ci-dessus :\n",
-    "- 1. Ecrire qui une fonction qui prend en entrée la DataFrame des transactions et l'index d'une ligne (transaction) et renvoie True si la transaction a un chiffre d'affaire (colonne `revenue`) qui est dans le top 5% des transactions de la journée.\n",
+    "- 1. Ecrire qui une fonction qui prend en entrée la DataFrame des transactions et l'index d'une ligne (transaction) et renvoie True si la transaction a un chiffre d'affaire (colonne `revenue`) qui est dans le top 25% des transactions de la journée. Utiliser cette fonction pour flaguer ces transactions\n",
     "\n",
     "\n",
-    "- 2. Même question mais avec le mois en cours à la place de la journée"
+    "- 2. Même question mais avec le mois en cours à la place de la journée\n",
+    "\n",
+    "- 3. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caaae851",
+   "id": "e1ee9367",
    "metadata": {},
    "outputs": [],
    "source": []
