--- a/tps/2_a_stats_descriptives.ipynb
+++ b/tps/2_a_stats_descriptives.ipynb
@@ -863,10 +863,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv(\"../data/imdb/movie_metadata.csv\")"
+   ]
   },
   {
    "cell_type": "code",
