--- a/tps/exercice_3.ipynb
+++ b/tps/exercice_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d8b69c2c",
+   "id": "8e983763",
    "metadata": {},
    "source": [
     "# [Ex. 3 ] \n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 431,
-   "id": "3aade471",
+   "id": "efd7987b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 432,
-   "id": "5852ab50",
+   "id": "8a66d008",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef38bd4a",
+   "id": "5dd48995",
    "metadata": {},
    "source": [
     "### Question 2 (méthode 1 - à la main)"
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 433,
-   "id": "cd48f12c",
+   "id": "eb6c1ceb",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "409a1c6f",
+   "id": "408a3729",
    "metadata": {},
    "source": [
     "#### Question 2 (méthode 2 - Usage \"intermédiaire\" de pd.get_dummies)"
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 434,
-   "id": "84fc01b3",
+   "id": "d53d4a48",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "828f01ea",
+   "id": "5e8546aa",
    "metadata": {},
    "source": [
     "#### Explications .str.get_dummies"
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 435,
-   "id": "c2ca9ddc",
+   "id": "f56b2699",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 436,
-   "id": "1fc275ad",
+   "id": "e83d6361",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b58bcb19",
+   "id": "a30ab7a3",
    "metadata": {},
    "source": [
     "#### Question 3"
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 437,
-   "id": "f33e9bdf",
+   "id": "1986fa6f",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49590791",
+   "id": "1888512c",
    "metadata": {},
    "source": [
     "#### Question bonus\n",
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 438,
-   "id": "e6c7df8e",
+   "id": "53e40fb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 439,
-   "id": "5434f482",
+   "id": "019b34fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac6c5a62",
+   "id": "0d135346",
    "metadata": {},
    "source": [
     "#### Question 3.a"
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 440,
-   "id": "885c641f",
+   "id": "f8f0c09e",
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5cb88ad",
+   "id": "974dc2ab",
    "metadata": {},
    "source": [
     "#### Question 3.b"
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 441,
-   "id": "1ed07557",
+   "id": "131e3238",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5442c716",
+   "id": "972616d6",
    "metadata": {},
    "source": [
     "#### Question 4 a."
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 442,
-   "id": "34fa7529",
+   "id": "96ca54f9",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff9c441e",
+   "id": "a4164672",
    "metadata": {},
    "source": [
     "#### Question 4 b."
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 443,
-   "id": "75b27913",
+   "id": "77658baf",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0b7f25c",
+   "id": "9fb3eaad",
    "metadata": {},
    "source": [
     "#### Question 5\n",
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbfc8b8b",
+   "id": "9ee1606a",
    "metadata": {},
    "source": [
     "#### Méthode 1 : Echec"
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 521,
-   "id": "9d1280fc",
+   "id": "769d97b1",
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c4a2597",
+   "id": "1424b7a6",
    "metadata": {},
    "source": [
     "#### Méthode 2"
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 567,
-   "id": "b7b1747c",
+   "id": "ca7fe40e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 574,
-   "id": "9988de72",
+   "id": "c7c02fcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 575,
-   "id": "ccee824c",
+   "id": "6ca126b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 576,
-   "id": "a777e2eb",
+   "id": "06ffe453",
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "def89338",
+   "id": "a6dc0287",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b566c57",
+   "metadata": {},
+   "source": [
+    "#### Question 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 578,
+   "id": "492b9297",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../data/imdb/movie_metadata.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 580,
+   "id": "92ce0492",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df.country==\"USA\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbf434a7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1036,10 +1072,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2011469f",
+   "id": "c49e9ab4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "selected_columns = ['gross', 'budget']"
+   ]
   }
  ],
  "metadata": {
