--- a/tps/1_b_premier_pas_avec_pandas.ipynb
+++ b/tps/1_b_premier_pas_avec_pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "477718ac",
+   "id": "0d6a09c4",
    "metadata": {},
    "source": [
     "# [Exercices] Premier pas avec `pandas`\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d26870ec",
+   "id": "79fc937b",
    "metadata": {},
    "source": [
     "# [Ex. 1] \n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e1d159be",
+   "id": "1e35dc63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55047d83",
+   "id": "4c0f0c5e",
    "metadata": {},
    "source": [
     "#### question 2"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8d38e402",
+   "id": "1988093b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfa7af4a",
+   "id": "c50c1d12",
    "metadata": {},
    "source": [
     "#### question 3"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "04e995d9",
+   "id": "4f024bad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b1d25b22",
+   "id": "53c1e836",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "80b92c55",
+   "id": "44268187",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0ffb270d",
+   "id": "a2cefda9",
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ad5a45",
+   "id": "e1b6f5f1",
    "metadata": {},
    "source": [
     "#### question 4"
@@ -1002,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a7ef3f3c",
+   "id": "084819c3",
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c4f8665",
+   "id": "7139a39c",
    "metadata": {},
    "source": [
     "#### question 5"
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3343005b",
+   "id": "93bef67d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c23e62d3",
+   "id": "fc45dda4",
    "metadata": {},
    "outputs": [
     {
@@ -2382,7 +2382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "843359f8",
+   "id": "d46a5084",
    "metadata": {},
    "source": [
     "##### Rappel : list comprehension"
@@ -2391,7 +2391,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d05038fd",
+   "id": "be455d53",
    "metadata": {},
    "outputs": [
     {
@@ -2424,7 +2424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76c2a4e1",
+   "id": "a153f861",
    "metadata": {},
    "source": [
     "#### Question 6"
@@ -2433,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "fdcd3f06",
+   "id": "b08f62b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2452,7 +2452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c5bafe3",
+   "id": "3228fd8f",
    "metadata": {},
    "source": [
     "#### Question 7"
@@ -2461,7 +2461,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "6b046dc4",
+   "id": "70fb1f64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2472,7 +2472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73160029",
+   "id": "4f09ceba",
    "metadata": {},
    "source": [
     "#### Question 8"
@@ -2481,7 +2481,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "41207349",
+   "id": "80af39ee",
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cf93aca",
+   "id": "2ca53c20",
    "metadata": {},
    "source": [
     "# [Ex. 2] Création de données de tests\n",
@@ -2570,7 +2570,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "e2a000c1",
+   "id": "5f9b40e7",
    "metadata": {},
    "outputs": [
     {
@@ -2729,7 +2729,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "c41cb894",
+   "id": "15661a72",
    "metadata": {},
    "outputs": [
     {
@@ -2761,7 +2761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60060719",
+   "id": "20464d07",
    "metadata": {},
    "source": [
     "#### Question 3"
@@ -2770,7 +2770,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "953ba72e",
+   "id": "b0d28cdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2784,7 +2784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b02349a6",
+   "id": "aa31ca0b",
    "metadata": {},
    "source": [
     "#### Question 4 / 5 (une seule variable)"
@@ -2793,7 +2793,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "a31de567",
+   "id": "8d98b28c",
    "metadata": {},
    "outputs": [
     {
@@ -2852,7 +2852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf5146b6",
+   "id": "ee21594b",
    "metadata": {},
    "source": [
     "#### Question 4 / 5 (deux variables)"
@@ -2861,7 +2861,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "772964e7",
+   "id": "7f8e42ec",
    "metadata": {},
    "outputs": [
     {
@@ -2952,7 +2952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f16b0bdb",
+   "id": "5868e27f",
    "metadata": {},
    "source": [
     "# [Ex. 3 ] \n",
@@ -2987,12 +2987,15 @@
     "- b. Implémenter ces deux méthodes.\n",
     "\n",
     "\n",
-    "- 6. Bâtir un modèle de prédiction de la variable `imdb_score` sur la base des autres variables et des données disponibles a priori (ie, pour réaliser la prédiction d'un film sorti en 2010, on peut utiliser toutes les statistiques des films sortis en 2009)\n"
+    "- 6. Bâtir un modèle de prédiction de la variable `imdb_score` sur la base des autres variables et des données disponibles a priori (ie, pour réaliser la prédiction d'un film sorti en 2010, on peut utiliser toutes les statistiques des films sortis en 2009)\n",
+    "\n",
+    "\n",
+    "- 7. On crée un nouvelle variable `is_good_movie` qui vaut True si l`imdb_score` est plus grand que 7 et vaut False sinon. Bâtir un modèle de prédiction de la variable `imdb_score` sur la base des autres variables et des données disponibles a priori.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "768c4827",
+   "id": "33736c31",
    "metadata": {},
    "source": [
     "# [Ex. 4] \n",
@@ -3009,7 +3012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec30b678",
+   "id": "98a7050f",
    "metadata": {},
    "source": [
     "# [Ex. 5] Une question d'entretien\n",
@@ -3046,7 +3049,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "362f1a4c",
+   "id": "a432610c",
    "metadata": {},
    "outputs": [
     {
@@ -3074,7 +3077,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "128b6cf0",
+   "id": "7586f7b2",
    "metadata": {},
    "outputs": [
     {
@@ -3106,7 +3109,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "8eaf69e1",
+   "id": "5624d855",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3140,7 +3143,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "30066d5e",
+   "id": "6d2e7727",
    "metadata": {},
    "outputs": [
     {
@@ -3161,7 +3164,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "76aca0e9",
+   "id": "c62ea8ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3195,7 +3198,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "41cd073b",
+   "id": "8d01e727",
    "metadata": {},
    "outputs": [
     {
@@ -3216,7 +3219,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "06cf4360",
+   "id": "87ad6b36",
    "metadata": {},
    "outputs": [
     {
@@ -3254,7 +3257,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "b0453cb5",
+   "id": "d72dc811",
    "metadata": {},
    "outputs": [
     {
@@ -3275,7 +3278,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "82714d48",
+   "id": "e51d94f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3286,7 +3289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6d4faa6",
+   "id": "744eeda1",
    "metadata": {},
    "outputs": [],
    "source": []
