--- a/tps/1_b_premier_pas_avec_pandas.ipynb
+++ b/tps/1_b_premier_pas_avec_pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0d6a09c4",
+   "id": "f5447325",
    "metadata": {},
    "source": [
     "# [Exercices] Premier pas avec `pandas`\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79fc937b",
+   "id": "3d5b061b",
    "metadata": {},
    "source": [
     "# [Ex. 1] \n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1e35dc63",
+   "id": "6181eaa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c0f0c5e",
+   "id": "da2cb38c",
    "metadata": {},
    "source": [
     "#### question 2"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1988093b",
+   "id": "bb0ea3c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c50c1d12",
+   "id": "2556a3d3",
    "metadata": {},
    "source": [
     "#### question 3"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4f024bad",
+   "id": "0f798e5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "53c1e836",
+   "id": "332de123",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "44268187",
+   "id": "2eb5c6b6",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a2cefda9",
+   "id": "5be534ed",
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1b6f5f1",
+   "id": "40c6a6d5",
    "metadata": {},
    "source": [
     "#### question 4"
@@ -1002,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "084819c3",
+   "id": "3e44b272",
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7139a39c",
+   "id": "b1498a2b",
    "metadata": {},
    "source": [
     "#### question 5"
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "93bef67d",
+   "id": "0a17f92b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fc45dda4",
+   "id": "37ca8742",
    "metadata": {},
    "outputs": [
     {
@@ -2382,7 +2382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d46a5084",
+   "id": "f5de7a50",
    "metadata": {},
    "source": [
     "##### Rappel : list comprehension"
@@ -2391,7 +2391,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "be455d53",
+   "id": "c4f9c1db",
    "metadata": {},
    "outputs": [
     {
@@ -2424,7 +2424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a153f861",
+   "id": "6c9e3dbf",
    "metadata": {},
    "source": [
     "#### Question 6"
@@ -2433,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b08f62b3",
+   "id": "41d37d00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2452,7 +2452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3228fd8f",
+   "id": "a8e5eb1a",
    "metadata": {},
    "source": [
     "#### Question 7"
@@ -2461,7 +2461,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "70fb1f64",
+   "id": "c3e442b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2472,7 +2472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f09ceba",
+   "id": "4d349b9f",
    "metadata": {},
    "source": [
     "#### Question 8"
@@ -2481,7 +2481,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "80af39ee",
+   "id": "9f7a873a",
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ca53c20",
+   "id": "b73d7e45",
    "metadata": {},
    "source": [
     "# [Ex. 2] Création de données de tests\n",
@@ -2570,7 +2570,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "5f9b40e7",
+   "id": "d492c935",
    "metadata": {},
    "outputs": [
     {
@@ -2729,7 +2729,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "15661a72",
+   "id": "e2aacf87",
    "metadata": {},
    "outputs": [
     {
@@ -2761,7 +2761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20464d07",
+   "id": "b5f76372",
    "metadata": {},
    "source": [
     "#### Question 3"
@@ -2770,7 +2770,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "b0d28cdb",
+   "id": "d60c1d94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2784,7 +2784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa31ca0b",
+   "id": "f87dd6f9",
    "metadata": {},
    "source": [
     "#### Question 4 / 5 (une seule variable)"
@@ -2793,7 +2793,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "8d98b28c",
+   "id": "b5870994",
    "metadata": {},
    "outputs": [
     {
@@ -2852,7 +2852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee21594b",
+   "id": "9f5d0369",
    "metadata": {},
    "source": [
     "#### Question 4 / 5 (deux variables)"
@@ -2861,7 +2861,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "7f8e42ec",
+   "id": "03874b5c",
    "metadata": {},
    "outputs": [
     {
@@ -2952,7 +2952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5868e27f",
+   "id": "107646ab",
    "metadata": {},
    "source": [
     "# [Ex. 3 ] \n",
@@ -2983,19 +2983,24 @@
     "\n",
     "\n",
     "- 5. \n",
-    "- a. Plusieurs utilisateurs de l'IMDB ont reporté que les notes seraient gonflées depuis quelques années. Que peut-on calculer pour essayer de s'en assurer ? Proposer deux méthodes.\n",
-    "- b. Implémenter ces deux méthodes.\n",
+    " - a. Plusieurs utilisateurs de l'IMDB ont reporté que les notes seraient gonflées depuis quelques années. Que peut-on calculer pour essayer de s'en assurer ? Proposer deux méthodes.\n",
+    " - b. Implémenter ces deux méthodes.\n",
     "\n",
     "\n",
-    "- 6. Bâtir un modèle de prédiction de la variable `imdb_score` sur la base des autres variables et des données disponibles a priori (ie, pour réaliser la prédiction d'un film sorti en 2010, on peut utiliser toutes les statistiques des films sortis en 2009)\n",
+    "- 6. \n",
+    " - a. En calculant des moyennes, en regardant des évolutions, en calculant des proportions ou des tables de contingence... déterminer des conditions qui semblent être associées à des notes plus élevées.\n",
+    " - b. Bâtir un modèle de prédiction de la variable `imdb_score` sur la base des autres variables et des données disponibles a priori (ie, pour réaliser la prédiction d'un film sorti en 2010, on peut utiliser toutes les statistiques des films sortis en 2009)\n",
     "\n",
     "\n",
-    "- 7. On crée un nouvelle variable `is_good_movie` qui vaut True si l`imdb_score` est plus grand que 7 et vaut False sinon. Bâtir un modèle de prédiction de la variable `imdb_score` sur la base des autres variables et des données disponibles a priori.\n"
+    "- 7. On crée un nouvelle variable `is_good_movie` qui vaut True si l`imdb_score` est plus grand que 7 et vaut False sinon. \n",
+    "\n",
+    "- a. En calculant des moyennes, en regardant des évolutions, en calculant des proportions ou des tables de contingence... déterminer des conditions qui semblent être associées à \"des bons films\".\n",
+    "- b. Bâtir un modèle de prédiction de la variable `is_good_movie` sur la base des autres variables et des données disponibles a priori.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "33736c31",
+   "id": "c1b09bcf",
    "metadata": {},
    "source": [
     "# [Ex. 4] \n",
@@ -3012,7 +3017,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98a7050f",
+   "id": "c4af396d",
    "metadata": {},
    "source": [
     "# [Ex. 5] Une question d'entretien\n",
@@ -3049,7 +3054,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "a432610c",
+   "id": "22e1b6ce",
    "metadata": {},
    "outputs": [
     {
@@ -3077,7 +3082,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "7586f7b2",
+   "id": "d2e8f7bb",
    "metadata": {},
    "outputs": [
     {
@@ -3109,7 +3114,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "5624d855",
+   "id": "03e11936",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3143,7 +3148,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "6d2e7727",
+   "id": "5603d158",
    "metadata": {},
    "outputs": [
     {
@@ -3164,7 +3169,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "c62ea8ae",
+   "id": "e3a40b3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3198,7 +3203,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "8d01e727",
+   "id": "40880d61",
    "metadata": {},
    "outputs": [
     {
@@ -3219,7 +3224,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "87ad6b36",
+   "id": "5360e578",
    "metadata": {},
    "outputs": [
     {
@@ -3257,7 +3262,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "d72dc811",
+   "id": "c7e2dcde",
    "metadata": {},
    "outputs": [
     {
@@ -3278,7 +3283,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "e51d94f5",
+   "id": "7c4612b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3289,7 +3294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "744eeda1",
+   "id": "4f4838b0",
    "metadata": {},
    "outputs": [],
    "source": []
