--- a/tps/1_b_premier_pas_avec_pandas.ipynb
+++ b/tps/1_b_premier_pas_avec_pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f5447325",
+   "id": "bb87c81f",
    "metadata": {},
    "source": [
     "# [Exercices] Premier pas avec `pandas`\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d5b061b",
+   "id": "825237e3",
    "metadata": {},
    "source": [
     "# [Ex. 1] \n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6181eaa1",
+   "id": "8add9469",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da2cb38c",
+   "id": "24d4983c",
    "metadata": {},
    "source": [
     "#### question 2"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bb0ea3c5",
+   "id": "ad0165f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2556a3d3",
+   "id": "78d02b82",
    "metadata": {},
    "source": [
     "#### question 3"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0f798e5c",
+   "id": "91a9301c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "332de123",
+   "id": "857b7fb9",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2eb5c6b6",
+   "id": "3053b7c4",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5be534ed",
+   "id": "ceec3c0c",
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40c6a6d5",
+   "id": "2216961a",
    "metadata": {},
    "source": [
     "#### question 4"
@@ -1002,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3e44b272",
+   "id": "8f305d11",
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1498a2b",
+   "id": "083b38f6",
    "metadata": {},
    "source": [
     "#### question 5"
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0a17f92b",
+   "id": "b39a7f70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "37ca8742",
+   "id": "5b31250d",
    "metadata": {},
    "outputs": [
     {
@@ -2382,7 +2382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5de7a50",
+   "id": "f25d3844",
    "metadata": {},
    "source": [
     "##### Rappel : list comprehension"
@@ -2391,7 +2391,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c4f9c1db",
+   "id": "efa4de5d",
    "metadata": {},
    "outputs": [
     {
@@ -2424,7 +2424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c9e3dbf",
+   "id": "7ce0ea70",
    "metadata": {},
    "source": [
     "#### Question 6"
@@ -2433,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "41d37d00",
+   "id": "0569b1e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2452,7 +2452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8e5eb1a",
+   "id": "bddad583",
    "metadata": {},
    "source": [
     "#### Question 7"
@@ -2461,7 +2461,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "c3e442b5",
+   "id": "612fd60e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2472,7 +2472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d349b9f",
+   "id": "90dc855b",
    "metadata": {},
    "source": [
     "#### Question 8"
@@ -2481,7 +2481,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "9f7a873a",
+   "id": "f285dc46",
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73d7e45",
+   "id": "74bf0372",
    "metadata": {},
    "source": [
     "# [Ex. 2] Création de données de tests\n",
@@ -2570,7 +2570,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "d492c935",
+   "id": "c0adaa35",
    "metadata": {},
    "outputs": [
     {
@@ -2729,7 +2729,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "e2aacf87",
+   "id": "7ff7efab",
    "metadata": {},
    "outputs": [
     {
@@ -2761,7 +2761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5f76372",
+   "id": "fce8c10b",
    "metadata": {},
    "source": [
     "#### Question 3"
@@ -2770,7 +2770,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "d60c1d94",
+   "id": "d927bf0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2784,7 +2784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f87dd6f9",
+   "id": "69c44a7d",
    "metadata": {},
    "source": [
     "#### Question 4 / 5 (une seule variable)"
@@ -2793,7 +2793,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "b5870994",
+   "id": "0696e20d",
    "metadata": {},
    "outputs": [
     {
@@ -2852,7 +2852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f5d0369",
+   "id": "900890d7",
    "metadata": {},
    "source": [
     "#### Question 4 / 5 (deux variables)"
@@ -2861,7 +2861,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "03874b5c",
+   "id": "22435aa1",
    "metadata": {},
    "outputs": [
     {
@@ -2952,7 +2952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107646ab",
+   "id": "3b6f387a",
    "metadata": {},
    "source": [
     "# [Ex. 3 ] \n",
@@ -2990,17 +2990,18 @@
     "- 6. \n",
     " - a. En calculant des moyennes, en regardant des évolutions, en calculant des proportions ou des tables de contingence... déterminer des conditions qui semblent être associées à des notes plus élevées.\n",
     " - b. Bâtir un modèle de prédiction de la variable `imdb_score` sur la base des autres variables et des données disponibles a priori (ie, pour réaliser la prédiction d'un film sorti en 2010, on peut utiliser toutes les statistiques des films sortis en 2009)\n",
+    " (On pourra utiliser seulement les variables #likes sur facebook pour le film, et la durée et filtrer sur les films après 2000 et sur les films des Etats-Unis et du Royaume Uni et reproduire la méthode dans 3_a_... - 9. Un peu de prédiction - 𝑃=𝑎1×𝐶+𝑎2×𝐷 )\n",
     "\n",
     "\n",
     "- 7. On crée un nouvelle variable `is_good_movie` qui vaut True si l`imdb_score` est plus grand que 7 et vaut False sinon. \n",
     "\n",
-    "- a. En calculant des moyennes, en regardant des évolutions, en calculant des proportions ou des tables de contingence... déterminer des conditions qui semblent être associées à \"des bons films\".\n",
-    "- b. Bâtir un modèle de prédiction de la variable `is_good_movie` sur la base des autres variables et des données disponibles a priori.\n"
+    " - a. En calculant des moyennes, en regardant des évolutions, en calculant des proportions ou des tables de contingence... déterminer des conditions qui semblent être associées à \"des bons films\".\n",
+    " - b. Bâtir un modèle de prédiction de la variable `is_good_movie` sur la base des autres variables et des données disponibles a priori.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c1b09bcf",
+   "id": "e0e827c6",
    "metadata": {},
    "source": [
     "# [Ex. 4] \n",
@@ -3017,7 +3018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4af396d",
+   "id": "d48a8078",
    "metadata": {},
    "source": [
     "# [Ex. 5] Une question d'entretien\n",
@@ -3054,7 +3055,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "22e1b6ce",
+   "id": "0d5817af",
    "metadata": {},
    "outputs": [
     {
@@ -3082,7 +3083,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "d2e8f7bb",
+   "id": "dec291ca",
    "metadata": {},
    "outputs": [
     {
@@ -3114,7 +3115,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "03e11936",
+   "id": "e2fc612a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3148,7 +3149,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "5603d158",
+   "id": "adff6b7a",
    "metadata": {},
    "outputs": [
     {
@@ -3169,7 +3170,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "e3a40b3b",
+   "id": "58ed7efe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3203,7 +3204,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "40880d61",
+   "id": "07023ac2",
    "metadata": {},
    "outputs": [
     {
@@ -3224,7 +3225,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "5360e578",
+   "id": "248a804e",
    "metadata": {},
    "outputs": [
     {
@@ -3262,7 +3263,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "c7e2dcde",
+   "id": "5c9f9800",
    "metadata": {},
    "outputs": [
     {
@@ -3283,7 +3284,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "7c4612b7",
+   "id": "6747be43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3294,7 +3295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f4838b0",
+   "id": "bf9cef50",
    "metadata": {},
    "outputs": [],
    "source": []
